<resources>
    <string name="app_name">Treina</string>
    <string name="title_activity_login">Treina</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>


    <!-- General strings -->
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="work_in_progress">En construcción</string>
    <string name="warning">Atención</string>
    <string name="confirm">Confirmar</string>
    <string name="cancel">Cancelar</string>
    <string name="confirm_delete_message">¿Está seguro que desea eliminar este elemento?</string>

    <!-- Login page -->
    <string name="kindPersonClient">Soy cliente/deportista</string>
    <string name="kindPersonTrainer">Soy entrenador</string>
    <string name="app_name_uppercase">TREINA</string>
    <string name="trainer_code">Código de entrenador</string>
    <string name="sign_in">Iniciar sesión</string>
    <string name="login_register">No tengo cuenta.
        <b>Registrarme!</b>
    </string>

    <!-- Main page client -->
    <string name="main_activity_bottom_menu_client_exercices">Rutinas</string>
    <string name="main_activity_bottom_menu_client_diet">Dietas</string>
    <string name="main_activity_bottom_menu_client_chat">Chat</string>
    <string name="main_activity_bottom_menu_client_stats">Estadísticas</string>
    <string name="main_activity_bottom_menu_client_profile">Perfil</string>

    <!-- Main page trainer -->
    <string name="main_activity_bottom_menu_trainer_clients">Clientes</string>
    <string name="main_activity_bottom_menu_trainer_myexercices">Mis ejercicios</string>
    <string name="main_activity_bottom_menu_trainer_profile">Perfil</string>
    <string name="main_trainer_title_clients">Lista de clientes</string>

    <!-- MyExercice pages -->
    <string name="myexercice_title">Título del ejercicio</string>
    <string name="myexercice_description">Descripción del ejercicio</string>
    <string name="myexercice_details_title">Detalles del ejercicio</string>

    <!-- Client details -->
    <string name="client_details_title">Detalles del cliente</string>
    <string name="trainer_client_detail_bottom_menu_stats">General</string>
    <string name="trainer_client_detail_bottom_menu_exercices">Ejercicios</string>
    <string name="trainer_client_detail_bottom_menu_diet">Dietas</string>
</resources>
